--- a/.github/workflows/deploy-staging.yaml
+++ b/.github/workflows/deploy-staging.yaml
@@ -29,16 +29,16 @@ jobs:
         env:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY_JIRA_INTEGRATIONS }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID_JIRA_INTEGRATIONS }}
-          BACKEND_SENTRY_DSN: ${{ vars.BACKEND_SENTRY_DSN }}
+          #BACKEND_SENTRY_DSN: ${{ vars.BACKEND_SENTRY_DSN }}
           VITE_COMMIT_SHA: ${{ github.sha }}
           VITE_AUTH_SERVER_URL: ${{ vars.VITE_AUTH_SERVER_URL }}
           VITE_JIRA_CLIENT_ID: ${{ vars.VITE_JIRA_CLIENT_ID }}
           VITE_JIRA_SCOPE: ${{ vars.VITE_JIRA_SCOPE }}
           VITE_JIRA_CALLBACK_URL: ${{ vars.VITE_JIRA_CALLBACK_URL }}
           VITE_JIRA_API_URL: ${{ vars.VITE_JIRA_API_URL }}
-          VITE_FRONTEND_SENTRY_DSN: ${{ vars.VITE_FRONTEND_SENTRY_DSN }}
+          #VITE_FRONTEND_SENTRY_DSN: ${{ vars.VITE_FRONTEND_SENTRY_DSN }}
           VITE_STATUS_REPORTS_ENV: staging
-          VITE_JIRA_APP_KEY: bitovi.status-report.staging
+          VITE_JIRA_APP_KEY: jira-mcp-auth-bridge-staging
 
       - name: Build
         run: |
@@ -83,7 +83,7 @@ jobs:
 
           aws_r53_enable: true
           aws_r53_create_sub_cert: true
-          aws_r53_sub_domain_name: api-status-reports-staging
+          aws_r53_sub_domain_name: jira-mcp-auth-bridge-staging
           aws_r53_domain_name: bitovi.tools
           aws_elb_app_port: 3000
 
@@ -94,73 +94,41 @@ jobs:
 
           repo_env: repo_env
           env_ghs: ${{ secrets.DOT_ENV_STAGING }}
-
-  Deploy-Static-Assets:
-    needs: Build-Status-Reports
-    runs-on: ubuntu-latest
-    environment:
-      name: staging
-      url: ${{ steps.deploy.outputs.vm_url}}
-    steps:
-      - name: Download Build
-        uses: actions/download-artifact@v4
-        with:
-          name: build
-          path: dist
-
-      - id: deploy
-        name: Deploy static assets to S3
-        uses: bitovi/github-actions-deploy-static-site-to-aws@v0.2.6
-        with:
-          checkout: false
-          aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID_JIRA_INTEGRATIONS}}
-          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY_JIRA_INTEGRATIONS}}
-          aws_default_region: us-east-1
-          aws_site_source_folder: ./dist
-
-          aws_r53_sub_domain_name: status-reports-staging
-          aws_r53_domain_name: bitovi.tools
-          aws_site_cdn_aliases: status-reports-staging.bitovi.tools,statusreports-staging.bitovi.com
-          aws_r53_cert_arn: ${{ vars.AWS_CERT_ARN }}
-
-          tf_action: 'apply'
-          tf_state_bucket_destroy: true
-          aws_site_cdn_enabled: true
-
-  Sentry-Release-Backend:
-    needs: Deploy-Auth-Server
-    if: ${{ success() }}
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Create Sentry release
-        uses: getsentry/action-release@v1
-        env:
-          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
-          SENTRY_ORG: ${{ secrets.SENTRY_ORG }}
-          SENTRY_PROJECT: ${{ secrets.SENTRY_BACKEND_PROJECT }}
-        with:
-          environment: staging
-          version: ${{ github.sha }}
-
-  Sentry-Release-Frontend:
-    needs: Deploy-Static-Assets
-    if: ${{ success() }}
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Create Sentry release
-        uses: getsentry/action-release@v1
-        env:
-          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
-          SENTRY_ORG: ${{ secrets.SENTRY_ORG }}
-          SENTRY_PROJECT: ${{ secrets.SENTRY_FRONTEND_PROJECT }}
-        with:
-          environment: staging
-          version: ${{ github.sha }}
+#
+#  Sentry-Release-Backend:
+#    needs: Deploy-Auth-Server
+#    if: ${{ success() }}
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v4
+#        with:
+#          fetch-depth: 0
+#
+#      - name: Create Sentry release
+#        uses: getsentry/action-release@v1
+#        env:
+#          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
+#          SENTRY_ORG: ${{ secrets.SENTRY_ORG }}
+#          SENTRY_PROJECT: ${{ secrets.SENTRY_BACKEND_PROJECT }}
+#        with:
+#          environment: staging
+#          version: ${{ github.sha }}
+#
+#  Sentry-Release-Frontend:
+#    needs: Deploy-Static-Assets
+#    if: ${{ success() }}
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v4
+#        with:
+#          fetch-depth: 0
+#
+#      - name: Create Sentry release
+#        uses: getsentry/action-release@v1
+#        env:
+#          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
+#          SENTRY_ORG: ${{ secrets.SENTRY_ORG }}
+#          SENTRY_PROJECT: ${{ secrets.SENTRY_FRONTEND_PROJECT }}
+#        with:
+#          environment: staging
+#          version: ${{ github.sha }}
