--- a/.github/workflows/deploy-staging.yaml
+++ b/.github/workflows/deploy-staging.yaml
@@ -43,8 +43,9 @@ jobs:
       - name: Build
         run: |
           npm ci
-          npm run create:atlassian-connect -- --environment=staging
           npm run build
+
+       #  npm run create:atlassian-connect -- --environment=staging
 
       - name: Build to Artifacts
         uses: actions/upload-artifact@v4
