--- a/.github/workflows/deploy-staging.yaml
+++ b/.github/workflows/deploy-staging.yaml
@@ -43,9 +43,9 @@ jobs:
       - name: Build
         run: |
           npm ci
-          npm run build
 
        #  npm run create:atlassian-connect -- --environment=staging
+       #  npm run build
 
       - name: Build to Artifacts
         uses: actions/upload-artifact@v4
@@ -53,7 +53,7 @@ jobs:
           name: build
           if-no-files-found: error
           include-hidden-files: true
-          path: ./dist
+          path: ./server
 
   Deploy-Auth-Server:
     needs: Build-Status-Reports
@@ -69,7 +69,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: build
-          path: dist
+          path: server
 
       - id: deploy
         name: Deploy
