--- a/.github/workflows/deploy-staging.yaml
+++ b/.github/workflows/deploy-staging.yaml
@@ -63,9 +63,9 @@ jobs:
 
       - id: deploy
         name: Deploy
-        uses: bitovi/github-actions-deploy-docker-to-ec2@v1
+        uses: bitovi/github-actions-deploy-docker-to-ec2@v1.0.1
         with:
-          checkout: false
+          checkout: true
           aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID_JIRA_INTEGRATIONS}}
           aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY_JIRA_INTEGRATIONS}}
           aws_default_region: us-east-1
