--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,11 +1,11 @@
 name: Test
 
 on:
-  pull_request:
-    branches: [main]
+  #pull_request:
+  #  branches: [main]
   workflow_dispatch:
-  push:
-    branches: ['*']
+  #push:
+  #  branches: ['*']
 
 jobs:
   unit-test:
