--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@atlaskit/adf-schema": "^50.2.3",
+    "@atlaskit/editor-markdown-transformer": "^5.16.5",
     "@modelcontextprotocol/sdk": "^1.15.1",
     "@sentry/node": "^8.51.0",
     "@sentry/profiling-node": "^8.51.0",
@@ -26,6 +28,7 @@
     "express": "^4.18.2",
     "express-session": "^1.18.1",
     "jose": "^6.0.12",
+    "marklassian": "^1.0.4",
     "morgan": "^1.10.1",
     "node-fetch": "^3.3.2",
     "otpauth": "^9.3.6",
