--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eventsource": "^4.0.0",
     "express": "^4.18.2",
     "express-session": "^1.18.1",
+    "form-data": "^4.0.4",
     "jose": "^6.0.12",
     "marklassian": "^1.0.4",
     "morgan": "^1.10.1",
@@ -45,6 +46,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/express-session": "^1.18.2",
+    "@types/form-data": "^2.2.1",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "@types/node": "^22.14.0",
