--- a/package.json
+++ b/package.json
@@ -34,11 +34,13 @@
     "morgan": "^1.10.1",
     "node-fetch": "^3.3.2",
     "otpauth": "^9.3.6",
+    "tmp-promise": "^3.0.3",
     "undici": "^6.19.5",
     "undici-types": "^6.19.5",
     "uuid": "^11.0.3",
     "winston": "^3.17.0",
-    "winston-cloudwatch": "^6.3.0"
+    "winston-cloudwatch": "^6.3.0",
+    "yaml": "^2.8.1"
   },
   "devDependencies": {
     "@jest/globals": "^30.1.2",
