--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,11 +1,11 @@
 name: Test
 
 on:
-  #pull_request:
-  #  branches: [main]
+  pull_request:
+    branches: [main]
   workflow_dispatch:
-  #push:
-  #  branches: ['*']
+  push:
+    branches: ['*']
 
 jobs:
   unit-test:
@@ -66,7 +66,7 @@ jobs:
           npm run build
 
       - name: Run E2E Tests
-        run: npm run test:e2e
+        run: npm run test:e2e:mcp-sdk:mock
       - name: Save Artifacts
         if: always()
         uses: actions/upload-artifact@v4
