--- a/.github/workflows/deploy-prod.yaml
+++ b/.github/workflows/deploy-prod.yaml
@@ -40,7 +40,6 @@ jobs:
           VITE_JIRA_CALLBACK_URL: ${{ vars.VITE_JIRA_CALLBACK_URL }}
           VITE_JIRA_API_URL: ${{ vars.VITE_JIRA_API_URL }}
           VITE_STATUS_REPORTS_ENV: prod
-          VITE_JIRA_APP_KEY: jira-mcp-auth-bridge
 
       - id: deploy
         name: Deploy
@@ -57,7 +56,7 @@ jobs:
 
           aws_r53_enable: true
           aws_r53_create_sub_cert: true
-          aws_r53_sub_domain_name: jira-mcp-auth-bridge
+          aws_r53_sub_domain_name: cascade
           aws_r53_domain_name: bitovi.tools
           aws_elb_app_port: 3000
 
