--- a/.github/workflows/destroy-staging-manual.yaml
+++ b/.github/workflows/destroy-staging-manual.yaml
@@ -27,7 +27,7 @@ jobs:
 
           aws_r53_enable: true
           aws_r53_create_sub_cert: true
-          aws_r53_sub_domain_name: jira-mcp-auth-bridge-staging
+          aws_r53_sub_domain_name: cascade-staging
           aws_r53_domain_name: bitovi.tools
           aws_elb_app_port: 3000
 
