--- a/.github/workflows/deploy-prod.yaml
+++ b/.github/workflows/deploy-prod.yaml
@@ -8,6 +8,9 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: true
 
+env:
+  PORT: 3000
+
 jobs:
   Build-Server:
     runs-on: ubuntu-latest
@@ -44,6 +47,7 @@ jobs:
           FIGMA_OAUTH_SCOPES: ${{ vars.FIGMA_OAUTH_SCOPES }}
           FIGMA_CLIENT_SECRET: ${{ secrets.FIGMA_CLIENT_SECRET }}
           VITE_STATUS_REPORTS_ENV: prod
+          PORT: ${{ env.PORT }}
 
       - id: deploy
         name: Deploy
@@ -62,7 +66,7 @@ jobs:
           aws_r53_create_sub_cert: true
           aws_r53_sub_domain_name: cascade
           aws_r53_domain_name: bitovi.tools
-          aws_elb_app_port: 3000
+          aws_elb_app_port: ${{ env.PORT }}
 
           docker_full_cleanup: true
 
@@ -70,7 +74,6 @@ jobs:
           aws_ec2_instance_root_vol_size: 16
 
           repo_env: repo_env
-          env_ghs: ${{ secrets.DOT_ENV }}
 
       - name: Skip deployment
         if: ${{ github.ref_name != steps.latest_tag.outputs.latest_tag }}
