adding path ignore to trigger for workflows

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,6 +6,9 @@ on:
   workflow_dispatch:
   push:
     branches: ['*']
+    paths-ignore:
+      - '**.md'
+      - '.github/workflows/**'
 
 env:
   PORT: 3000
