--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "prepare": "husky",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:e2e:mcp-sdk:mock": "TEST_USE_MOCK_ATLASSIAN=true jest specs/mcp-sdk --testTimeout=30000 --runInBand"
+    "test:e2e:mcp-sdk:mock": "TEST_USE_MOCK_ATLASSIAN=true jest specs/mcp-sdk --testTimeout=30000 --runInBand --testMatch='**/specs/**/*.test.js' --testMatch='**/specs/**/*.test.ts' --testPathIgnorePatterns='/node_modules/'"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
@@ -72,9 +72,11 @@
     ],
     "testEnvironment": "node",
     "testMatch": [
-      "**/specs/**/*.test.js",
-      "**/specs/**/*.test.ts",
       "**/server/**/*.test.ts"
+    ],
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      "/specs/"
     ],
     "transform": {
       "^.+\\.ts$": [
