--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "prepare": "husky",
     "test": "jest",
     "test:watch": "jest --watch",
+    "test:e2e": "jest test/e2e --testTimeout=600000 --runInBand --testMatch='**/test/e2e/**/*.test.ts'",
+    "test:e2e:rest-api": "jest test/e2e/api-workflow.test.ts --testTimeout=600000 --runInBand --testMatch='**/test/e2e/**/*.test.ts'",
     "test:e2e:mcp-sdk:mock": "TEST_USE_MOCK_ATLASSIAN=true jest specs/mcp-sdk --testTimeout=30000 --runInBand --testMatch='**/specs/**/*.test.js' --testMatch='**/specs/**/*.test.ts' --testPathIgnorePatterns='/node_modules/'",
-    "test:e2e:rest-api": "jest specs/support-direct-api-requests.test.js --testTimeout=600000 --runInBand --testMatch='**/specs/**/*.test.js' --testPathIgnorePatterns='/node_modules/'",
-    "validate-pat-tokens": "node scripts/validate-pat-tokens.cjs",
-    "test-figma-token": "node scripts/test-figma-token.cjs"
+    "validate-pat-tokens": "node --import ./loader.mjs scripts/validate-pat-tokens.ts"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
