--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
     "sourceMap": true,
     "types": ["node", "jest"]
   },
-  "include": ["server/**/*", "specs/**/*"],
+  "include": ["server/**/*", "specs/**/*", "test/**/*", "scripts/**/*"],
   "exclude": ["node_modules", "dist", "**/*.test.js"]
 }
