first phase of switching to ai sdk

--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ai-sdk/anthropic": "^2.0.50",
     "@anthropic-ai/sdk": "^0.68.0",
     "@atlaskit/adf-schema": "^50.2.3",
     "@atlaskit/editor-markdown-transformer": "^5.16.5",
     "@modelcontextprotocol/sdk": "^1.15.1",
     "@sentry/node": "^8.51.0",
     "@sentry/profiling-node": "^8.51.0",
+    "ai": "^5.0.104",
     "aws-sdk": "^2.1692.0",
     "axios": "^1.1.2",
     "cors": "^2.8.5",
