--- a/package.json
+++ b/package.json
@@ -22,7 +22,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ai-sdk/amazon-bedrock": "^3.0.62",
     "@ai-sdk/anthropic": "^2.0.50",
+    "@ai-sdk/deepseek": "^1.0.10",
+    "@ai-sdk/google": "^1.0.19",
+    "@ai-sdk/groq": "^1.0.8",
+    "@ai-sdk/mistral": "^1.0.11",
+    "@ai-sdk/openai": "^1.0.10",
+    "@ai-sdk/xai": "^1.0.6",
     "@anthropic-ai/sdk": "^0.68.0",
     "@atlaskit/adf-schema": "^50.2.3",
     "@atlaskit/editor-markdown-transformer": "^5.16.5",
