--- a/.github/workflows/deploy-staging.yaml
+++ b/.github/workflows/deploy-staging.yaml
@@ -10,60 +10,15 @@ on:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
-  cancel-in-progress: true
+  cancel-in-progress: false
 
 env:
   PORT: 3000
 
 jobs:
-  Build-Server:
-    runs-on: ubuntu-latest
-    environment:
-      name: staging
-      url: ${{ steps.deploy.outputs.vm_url}}
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
-
-      - name: Generate .env and repo_env
-        run: |
-          ./scripts/generate-build-env.sh
-        env:
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY_JIRA_INTEGRATIONS }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID_JIRA_INTEGRATIONS }}
-          JIRA_CLIENT_SECRET: ${{ secrets.JIRA_CLIENT_SECRET }}
-          VITE_COMMIT_SHA: ${{ github.sha }}
-          VITE_AUTH_SERVER_URL: ${{ vars.VITE_AUTH_SERVER_URL }}
-          VITE_JIRA_CLIENT_ID: ${{ vars.VITE_JIRA_CLIENT_ID }}
-          VITE_JIRA_SCOPE: ${{ vars.VITE_JIRA_SCOPE }}
-          VITE_JIRA_CALLBACK_URL: ${{ vars.VITE_JIRA_CALLBACK_URL }}
-          VITE_JIRA_API_URL: ${{ vars.VITE_JIRA_API_URL }}
-          FIGMA_CLIENT_ID: ${{ vars.FIGMA_CLIENT_ID }}
-          FIGMA_OAUTH_SCOPES: ${{ vars.FIGMA_OAUTH_SCOPES }}
-          FIGMA_CLIENT_SECRET: ${{ secrets.FIGMA_CLIENT_SECRET }}
-          VITE_STATUS_REPORTS_ENV: staging
-          PORT: ${{ env.PORT }}
-
-      - id: deploy
-        name: Deploy
-        uses: bitovi/github-actions-deploy-docker-to-ec2@v1
-        with:
-          checkout: false
-          aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID_JIRA_INTEGRATIONS}}
-          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY_JIRA_INTEGRATIONS}}
-          aws_default_region: us-east-1
-
-          tf_state_bucket_destroy: true
-
-          aws_r53_enable: true
-          aws_r53_create_sub_cert: true
-          aws_r53_sub_domain_name: cascade-staging
-          aws_r53_domain_name: bitovi.tools
-          aws_elb_app_port: ${{ env.PORT }}
-
-          docker_full_cleanup: true
-
-          aws_ec2_instance_type: t3.small
-          aws_ec2_instance_root_vol_size: 16
-
-          repo_env: repo_env
+  deploy-mcp:
+    name: Deploy API to Development
+    uses: ./.github/workflows/deploy.yaml
+    secrets: inherit
+    with:
+      environment: staging
