--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -6,9 +6,10 @@ on:
       environment:
         description: 'Environment to deploy to'
         type: string
+        required: true
 
 concurrency:
-  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  group: deploy-${{ inputs.environment }}-${{ github.ref }}
   cancel-in-progress: false
 
 env:
