--- a/.github/workflows/deploy-staging.yaml
+++ b/.github/workflows/deploy-staging.yaml
@@ -12,12 +12,9 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: false
 
-env:
-  PORT: 3000
-
 jobs:
   deploy-mcp:
-    name: Deploy API to Development
+    name: Deploy MCP Staging
     uses: ./.github/workflows/deploy.yaml
     secrets: inherit
     with:
