--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
     "sourceMap": true,
     "types": ["node", "jest"]
   },
-  "include": ["server/**/*", "specs/**/*"],
-  "exclude": ["node_modules", "dist", "**/*.test.js"]
+  "include": ["server/**/*", "specs/**/*", "test/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
